--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -496,6 +496,10 @@ section {
   border: 2px solid #1f5297;
 }
 
+.resume .hidden-div {
+  display: none;
+}
+
 /*--------------------------------------------------------------
 # Portfolio
 --------------------------------------------------------------*/
