--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,62 +2,56 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Jean-Pierre van Zyl | {{ page.title }}</title>
-    <meta content="Jean-Pierre van Zyl - PhD Student in AI & Machine Learning at Stellenbosch University."
-        name="description">
-    <meta content="Jean-Pierre van Zyl, Machine Learning, AI, Stellenbosch University, PhD, Computer Science Portfolio"
-        name="keywords">
+  <title>{{ site.title }}{% if page.title %} | {{ page.title }}{% endif %}</title>
+  
+  <meta content="{{ site.description }}" name="description">
+  <meta content="{{ site.keywords }}" name="keywords">
 
-    <link href="/assets/img/admin/favicon.png" rel="icon">
-    <link href="/assets/img/admin/favicon.png" rel="apple-touch-icon">
+  <link href="{{ site.baseurl }}/assets/img/admin/favicon.png" rel="icon">
+  <link href="{{ site.baseurl }}/assets/img/admin/favicon.png" rel="apple-touch-icon">
 
-    <link
-        href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
-        rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
-    <link href="/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/assets/vendor/icofont/icofont.min.css" rel="stylesheet">
-    <link href="/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-    <link href="/assets/vendor/venobox/venobox.css" rel="stylesheet">
-    <link href="/assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="/assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="{{ site.baseurl }}/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="{{ site.baseurl }}/assets/vendor/icofont/icofont.min.css" rel="stylesheet">
+  <link href="{{ site.baseurl }}/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="{{ site.baseurl }}/assets/vendor/venobox/venobox.css" rel="stylesheet">
+  <link href="{{ site.baseurl }}/assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
+  <link href="{{ site.baseurl }}/assets/vendor/aos/aos.css" rel="stylesheet">
 
-    <link href="/assets/css/style.css" rel="stylesheet">
+  <link href="{{ site.baseurl }}/assets/css/style.css" rel="stylesheet">
 </head>
 
 <body>
+  <button type="button" class="mobile-nav-toggle d-xl-none"><i class="icofont-navigation-menu"></i></button>
 
-    <button type="button" class="mobile-nav-toggle d-xl-none"><i class="icofont-navigation-menu"></i></button>
+  <header id="header">
+    {% include header.html %}
+  </header>
 
-    <header id="header">
-        {% include header.html %}
-    </header>
+  {{ content }}
 
-    {{ content }}
+  <footer id="footer">
+    {% include footer.html %}
+  </footer>
 
-    <footer id="footer">
-        {% include footer.html %}
-    </footer>
+  <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
-    <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
+  <script src="{{ site.baseurl }}/assets/vendor/jquery/jquery.min.js"></script>
+  <script src="{{ site.baseurl }}/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="{{ site.baseurl }}/assets/vendor/jquery.easing/jquery.easing.min.js"></script>
+  <script src="{{ site.baseurl }}/assets/vendor/php-email-form/validate.js"></script>
+  <script src="{{ site.baseurl }}/assets/vendor/waypoints/jquery.waypoints.min.js"></script>
+  <script src="{{ site.baseurl }}/assets/vendor/counterup/counterup.min.js"></script>
+  <script src="{{ site.baseurl }}/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="{{ site.baseurl }}/assets/vendor/venobox/venobox.min.js"></script>
+  <script src="{{ site.baseurl }}/assets/vendor/owl.carousel/owl.carousel.min.js"></script>
+  <script src="{{ site.baseurl }}/assets/vendor/typed.js/typed.min.js"></script>
+  <script src="{{ site.baseurl }}/assets/vendor/aos/aos.js"></script>
 
-    <script src="/assets/vendor/jquery/jquery.min.js"></script>
-    <script src="/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="/assets/vendor/jquery.easing/jquery.easing.min.js"></script>
-    <script src="/assets/vendor/php-email-form/validate.js"></script>
-    <script src="/assets/vendor/waypoints/jquery.waypoints.min.js"></script>
-    <script src="/assets/vendor/counterup/counterup.min.js"></script>
-    <script src="/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="/assets/vendor/venobox/venobox.min.js"></script>
-    <script src="/assets/vendor/owl.carousel/owl.carousel.min.js"></script>
-    <script src="/assets/vendor/typed.js/typed.min.js"></script>
-    <script src="/assets/vendor/aos/aos.js"></script>
-
-    <script src="/assets/js/main.js"></script>
-
+  <script src="{{ site.baseurl }}/assets/js/main.js"></script>
 </body>
-
 </html>
